Add X/Y interval count option

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,10 @@
             <input type="text" name="zunit" />
         </div>
         <div style="padding-top: 10px">
+            X and Y axis interval count:
+            <input type="text" name="xyintervalcount" value="1" />
+        </div>
+        <div style="padding-top: 10px">
             X and Y axis interval:
             <input type="text" name="xyinterval" />
         </div>
